crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__lower_simple.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nfoo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Var {
        kind: LowVar,
        name: "foo",
    },
}
