crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__lower_with_numbers.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nfoo123"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Var {
        kind: LowVar,
        name: "foo123",
    },
}
