crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__lower_with_underscore.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nfoo_bar"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Var {
        kind: LowVar,
        name: "foo_bar",
    },
}
