crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__not_reserved_prefix.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nletter"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Var {
        kind: LowVar,
        name: "letter",
    },
}
