crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__upper_constructor.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nJust"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Var {
        kind: CapVar,
        name: "Just",
    },
}
